--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomplania</title>
+    <style>
+      #music-player {
+        position: absolute;
+        left: -9999px;
+        top: -9999px;
+      }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +22,14 @@
   </head>
   <body>
     <div id="root"></div>
+    <iframe
+      id="music-player"
+      src="https://www.youtube.com/embed/pgLjYsVP4H0?autoplay=1&loop=1&playlist=pgLjYsVP4H0"
+      frameborder="0"
+      allow="autoplay; encrypted-media"
+      allowfullscreen
+    >
+    </iframe>
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
